maps overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -1108,8 +1108,9 @@ h3 {
 
 @media (max-width: 767px) {
   /* line 20, ../../Arafath/CL/Cl November/226. Construction/HTML/scss/_slider.scss */
-  .slider_area .single_slider {
-    height: auto;
+  
+  .slider_area .single_slider .slider_text {
+    margin: 200px 0 50px 0;
   }
 }
 
